--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dotenv": "^6.0.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "styled-components": "^3.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
