--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "dotenv": "^6.0.0",
+    "firebase": "^5.3.1",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-firebaseui": "^3.0.6",
     "react-scripts": "1.1.4"
   },
   "scripts": {
