--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "firebase": "^5.3.1",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-firebaseui": "^3.0.6",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
-    "styled-components": "^3.4.2",
-    "react-firebaseui": "^3.0.6"
+    "styled-components": "^3.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
