Add redux, react-redux and redux-devtools

--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-firebaseui": "^3.0.6",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
+    "redux": "^4.0.0",
+    "redux-devtools": "^3.4.1",
     "styled-components": "^3.4.2"
   },
   "scripts": {
