--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "1.1.4",
     "redux": "^4.0.0",
     "redux-devtools": "^3.4.1",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^3.4.2"
   },
   "scripts": {
