--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^1.4.3",
     "dotenv": "^6.0.0",
     "firebase": "^5.3.1",
+    "numeral": "^2.0.6",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-firebaseui": "^3.0.6",
