--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^1.4.3",
+    "@material-ui/icons": "^2.0.1",
     "dotenv": "^6.0.0",
     "firebase": "^5.3.1",
     "numeral": "^2.0.6",
