--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
+    "react-slick": "^0.23.1",
     "redux": "^4.0.0",
     "redux-devtools": "^3.4.1",
     "redux-thunk": "^2.3.0",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^3.4.2"
   },
   "scripts": {
