--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "firebase": "^5.3.1",
     "numeral": "^2.0.6",
     "react": "^16.4.2",
+    "react-beautiful-dnd": "^9.0.2",
     "react-dom": "^16.4.2",
     "react-firebaseui": "^3.0.6",
     "react-redux": "^5.0.7",
